# intrinsic-quality-theory

./: .gitignore  CLAUDE.md  INTRODUCTION.md  README.md  REVIEW-RFC-0002.md  RFC-0001-experimental-framing-and-locus-v2.md  RFC-0002-intro.md  RFC-Experiencer-Experience-Identity-v2.1.md  RFC-Experiencer-Experience-Identity-v2.2.md  iqt.md  iqt_constraint_convergence_rewrite.md  iqt_v1_6_0.docx  iqt_v1_7_0.md  iqt_v1_7_1.md  iqt_v1_7_2.md
docs/: iqt_formal_verification_roadmap.md  iqt_formalization_plan_boboo.md  pdv3_gap_checklist.md  reference_runs.md
lean/: IQT.lean  constraint-convergence.md  lake-manifest.json  lakefile.toml
pdn/: persistent_diamonds_v3.docx  pyproject.toml
pdn/src/persistent_diamonds_v3/: __init__.py  cli.py  config.py
pdn/src/persistent_diamonds_v3/data/: __init__.py  distill_cache.py  objectives.py
pdn/src/persistent_diamonds_v3/data/env/: __init__.py  gridworld.py
pdn/src/persistent_diamonds_v3/evaluation/: __init__.py  metrics.py  protocols.py
pdn/src/persistent_diamonds_v3/models/: __init__.py  control_head.py  encoders.py  narrator.py  report_head.py  world_model.py
pdn/src/persistent_diamonds_v3/training/: __init__.py  distill.py  infra.py  stage1.py  stage2.py  stage4.py
pdn/tests/: test_distillation.py  test_hard_constraints.py  test_metrics_extended.py  test_models.py  test_objective_store.py  test_presets_and_infra.py  test_protocols.py  test_stage4.py
scripts/: protocol_sweep.sh  reference_run.sh  validate_artifacts.py
v1.6.0/: convert_docx_to_md.py  fix_ocr_pass2.py  inline_images.py  iqt_v1_6_0.docx
(+35 files in other folders)
